--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "ejs": "^2.6.2",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^1.6.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.12",
