--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.12",
+    "mongoose-type-url": "^2.1.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
