--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "dev": "nodemon app.js"
   },
   "nodemonConfig": {
-    "ignore": ["*.json", "*.txt", "*.md", "test/*", "docs/*", "models/*"],
+    "ignore": [
+      "*.json",
+      "*.txt",
+      "*.md",
+      "test/*",
+      "docs/*",
+      "models/*"
+    ],
     "delay": "2500"
   },
   "dependencies": {
@@ -22,6 +29,7 @@
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.12",
+    "mongoose-paginate": "^5.0.3",
     "mongoose-type-url": "^2.1.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
