--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "delay": "2500"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.2",
     "cloudinary": "^1.23.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
