--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
