--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
+    "accesscontrol": "^2.2.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "cookie-parser": "^1.4.5",
@@ -28,6 +29,7 @@
     "express-sanitizer": "^1.0.5",
     "express-session": "^1.17.1",
     "http-errors": "^1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.12",
