--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
-    "accesscontrol": "^2.2.1",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
@@ -40,6 +39,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-abac": "0.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
