--- a/package.json
+++ b/package.json
@@ -42,10 +42,13 @@
     "node-abac": "0.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "starability": "^2.4.0",
+    "tag-cloud": "^1.2.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "faker": "^5.3.1",
     "nodemon": "^2.0.7"
   }
 }
