--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.4.2",
     "axios": "^0.21.1",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.23.0",
     "cookie-parser": "^1.4.5",
