Minor changes to bucket calculation for tag cloud

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
       "*.md",
       "test/*",
       "docs/*",
-      "models/*"
+      "models/*",
+      "seeds.js"
     ],
     "delay": "2500"
   },
