--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
+    "ejs-lint": "^1.1.0",
     "faker": "^5.3.1",
     "nodemon": "^2.0.7"
   }
