--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "dotenv": "^8.2.0",
     "ejs-lint": "^1.1.0",
     "faker": "^5.3.1",
+    "heroku": "^7.49.0",
     "nodemon": "^2.0.7"
   }
 }
