--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "ejs-lint": "^1.1.0",
     "faker": "^5.3.1",
     "heroku": "^7.49.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "valid-url": "^1.0.9"
   }
 }
