--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "faker": "^5.3.1",
     "heroku": "^7.49.0",
     "nodemon": "^2.0.7",
+    "phoenix": "^1.5.8",
     "valid-url": "^1.0.9"
   }
 }
