Install 'ws' for heroku

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "heroku": "^7.49.0",
     "nodemon": "^2.0.7",
     "phoenix": "^1.5.8",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
+    "ws": "^7.4.3"
   }
 }
